--- a/api/python/pyproject.toml
+++ b/api/python/pyproject.toml
@@ -17,6 +17,10 @@ httpx = ">=0.20.0,<0.27.0"
 attrs = ">=21.3.0"
 python-dateutil = "^2.8.0"
 
+[tool.poetry.group.dev.dependencies]
+pylint = "^3.1.0"
+black = "^24.2.0"
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
