--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,3 +30,5 @@ jobs:
       - name: Check code style
         run: poetry run pylint airthings_sdk
 
+      # - name: Check types
+      #   run: poetry run mypy airthings_sdk
