--- a/api/python/pyproject.toml
+++ b/api/python/pyproject.toml
@@ -20,6 +20,7 @@ python-dateutil = "^2.8.0"
 [tool.poetry.group.dev.dependencies]
 pylint = "^3.1.0"
 black = "^24.2.0"
+mypy = "^1.8.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
