--- a/api/python/pyproject.toml
+++ b/api/python/pyproject.toml
@@ -12,12 +12,13 @@ include = ["CHANGELOG.md", "api_client/py.typed"]
 
 
 [tool.poetry.dependencies]
-python = "^3.8"
-httpx = ">=0.20.0,<0.27.0"
+python = "^3.10"
+httpx = ">=0.20.0,<0.28.0"
 attrs = ">=21.3.0"
-python-dateutil = "^2.8.0"
+python-dateutil = ">=2.8.1,<3.0.0"
 
 [tool.poetry.group.dev.dependencies]
+openapi-python-client = "^0.20.0"
 pylint = "^3.1.0"
 black = "^24.2.0"
 mypy = "^1.8.0"
