--- a/api/python/config.yaml
+++ b/api/python/config.yaml
@@ -1,2 +1,5 @@
 project_name_override: python
 package_name_override: airthings_api_client
+class_overrides:
+  SensorResponseType0:
+    class_name: SensorResponse
