--- a/api/python/pyproject.toml
+++ b/api/python/pyproject.toml
@@ -13,20 +13,20 @@ include = ["CHANGELOG.md", "api_client/py.typed"]
 
 [tool.poetry.dependencies]
 python = "^3.10"
-httpx = ">=0.20.0,<0.28.0"
-attrs = ">=21.3.0"
-python-dateutil = ">=2.8.1,<3.0.0"
+httpx = ">=0.28.0"
+attrs = ">=25.0.0"
+python-dateutil = ">=2.9.0,<3.0.0"
 
 [tool.poetry.group.dev.dependencies]
-openapi-python-client = "^0.20.0"
-pylint = "^3.1.0"
-black = "^24.2.0"
-mypy = "^1.8.0"
+openapi-python-client = "^0.25.0"
+pylint = "^3.3.7"
+black = "^25.1.0"
+mypy = "^1.16.0"
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
+requires = ["poetry-core>=2.1.3"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.ruff]
-select = ["F", "I", "UP"]
+lint.select = ["F", "I", "UP"]
 line-length = 120
