--- a/api/python/pyproject.toml
+++ b/api/python/pyproject.toml
@@ -1,33 +1,26 @@
 [tool.poetry]
-name = "airthings-sdk"
+name = "python"
 version = "1.0.0"
-description = "A client library for accessing Airthings for Consumer"
+description = "A client library for accessing Airthings for Consumer API"
 authors = []
 readme = "README.md"
-license = "MIT"
 packages = [
-    {include = "airthings_api_client"},
-    {include = "airthings_sdk"},
+    { include = "airthings_api_client" },
 ]
-include = ["CHANGELOG.md", "api_client/py.typed"]
-
+include = ["CHANGELOG.md", "airthings_api_client/py.typed"]
 
 [tool.poetry.dependencies]
-python = "^3.11"
-httpx = "^0.28.1"
-attrs = ">=25.3.0"
-# python-dateutil = ">=2.9.0,<3.0.0"
-
-[tool.poetry.group.dev.dependencies]
-openapi-python-client = "^0.25.3"
-pylint = "^3.3.7"
-black = "^25.1.0"
-mypy = "^1.17.0"
+python = "^3.9"
+httpx = ">=0.23.0,<0.29.0"
+attrs = ">=22.2.0"
+python-dateutil = "^2.8.0"
 
 [build-system]
-requires = ["poetry-core>=2.1.3"]
+requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.ruff]
-lint.select = ["F", "I", "UP"]
 line-length = 120
+
+[tool.ruff.lint]
+select = ["F", "I", "UP"]
