--- a/api/python/airthings-sdk/config.yaml
+++ b/api/python/airthings-sdk/config.yaml
@@ -1,4 +1,4 @@
-project_name_override: python
+project_name_override: airthings-sdk
 package_name_override: airthings_api_client
 class_overrides:
   SensorResponseType0:
