--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,1 +1,1 @@
-* @Airthings/software_platform 
+* @Airthings/software_platform @Airthings/data_platform @Airthings/devices @Airthings/hardware_platform
