Managed by Terraform, updates managed through: https://github.com/Airthings/services

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,1 +1,1 @@
-* @Airthings/software_platform @Airthings/data_platform @Airthings/devices @Airthings/hardware_platform
+* @Airthings/software_platform @Airthings/app_team @Airthings/data_platform @Airthings/hardware_platform
