--- a/api/python/airthings-sdk/pyproject.toml
+++ b/api/python/airthings-sdk/pyproject.toml
@@ -11,10 +11,15 @@ packages = [
 include = ["CHANGELOG.md", "airthings_api_client/py.typed"]
 
 [tool.poetry.dependencies]
-python = "^3.9"
-httpx = ">=0.23.0,<0.29.0"
-attrs = ">=22.2.0"
-python-dateutil = "^2.8.0"
+python = "^3.10"
+httpx = ">=0.28.1,<0.29.0"
+attrs = ">=25,<26"
+python-dateutil = "^2.9.0"
+
+[tool.poetry.group.dev.dependencies]
+black = "^26.0.0"
+mypy = "^1.19.1"
+pylint = "^4.0.0"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
